name:                queue-animations
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/timjb/queue-animations#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
copyright:           MIT License
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     VisualizationData.Queue.Interface,
                       VisualizationData.Queue.Bankers,
                       VisualizationData.Queue.Amortized,
                       VisualizationData.Queue.RealTime,
                       VisualizationData.Thunk,
                       Visualization.Common,
                       Visualization.Queue.Generic,
                       Visualization.Queue.Bankers,
                       Visualization.Queue.Amortized,
                       Visualization.Queue.RealTime
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , react-flux
                     , deepseq
  default-language:    Haskell2010

executable queue-animations-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , queue-animations
                     , react-flux
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timjb/queue-animations